fix: long posts and comments wrap incorrectly

--- a/frontend/src/components/feedpost/FeedPost.module.css
+++ b/frontend/src/components/feedpost/FeedPost.module.css
@@ -1,10 +1,8 @@
-.scoreBox {
-  display: flex;
-  border: 1px solid #808080;
-  border-radius: 30px;
-}
-
-.scoreLabel {
-  align-content: center;
-  padding-right: 15px;
+.contentText {
+  max-height: 60px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  mask-image: linear-gradient(0deg, transparent, black 50%);
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
